--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
 bcrypt==4.2.0
+blinker==1.8.2
 capstone==5.0.3
 certifi==2024.8.30
 cffi==1.17.0
 charset-normalizer==3.3.2
+click==8.1.7
 colored-traceback==0.4.2
 cryptography==43.0.1
+Flask==3.0.3
 idna==3.8
 intervaltree==3.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
 packaging==24.1
 paramiko==3.4.1
 plumbum==1.8.3
 psutil==6.0.0
-pwntools==4.13.0
 pycparser==2.22
 pyelftools==0.31
 Pygments==2.18.0
@@ -29,4 +33,5 @@ sortedcontainers==2.4.0
 unicorn==2.0.1.post1
 unix-ar==0.2.1
 urllib3==2.2.2
+Werkzeug==3.0.4
 zstandard==0.23.0
